--- a/views/menu.xml
+++ b/views/menu.xml
@@ -2,17 +2,9 @@
 <odoo>
     <data>
 
-        <!-- Main Menu -->
-        <menuitem id="menu_isp_root" name="ISP Management" sequence="10"/>
+        <!-- Actions -->
 
-        <!-- Dashboard -->
-        <menuitem id="menu_isp_dashboard" name="Dashboard" parent="menu_isp_root" sequence="1"/>
-
-        <!-- Services Menu -->
-        <menuitem id="menu_isp_services" name="Services" parent="menu_isp_root" sequence="2"/>
-
-        <!-- ISP Service Model Views -->
-        <menuitem id="menu_isp_service" name="ISP Services" parent="menu_isp_services" action="action_isp_service" sequence="1"/>
+        <!-- ISP Services -->
         <record id="action_isp_service" model="ir.actions.act_window">
             <field name="name">ISP Services</field>
             <field name="res_model">isp.service</field>
@@ -25,7 +17,6 @@
         </record>
 
         <!-- Providers -->
-        <menuitem id="menu_isp_providers" name="Providers" parent="menu_isp_services" action="action_isp_provider" sequence="2"/>
         <record id="action_isp_provider" model="ir.actions.act_window">
             <field name="name">ISP Providers</field>
             <field name="res_model">isp.provider</field>
@@ -33,7 +24,6 @@
         </record>
 
         <!-- Service Types -->
-        <menuitem id="menu_isp_service_types" name="Service Types" parent="menu_isp_services" action="action_isp_service_type" sequence="3"/>
         <record id="action_isp_service_type" model="ir.actions.act_window">
             <field name="name">ISP Service Types</field>
             <field name="res_model">isp.service.type</field>
@@ -41,7 +31,6 @@
         </record>
 
         <!-- Invoice Import Wizard -->
-        <menuitem id="menu_isp_invoice_import" name="Import Invoices" parent="menu_isp_root" action="action_invoice_import_wizard" sequence="3"/>
         <record id="action_invoice_import_wizard" model="ir.actions.act_window">
             <field name="name">Import ISP Invoices</field>
             <field name="res_model">isp.invoice.import.wizard</field>
@@ -50,13 +39,32 @@
         </record>
 
         <!-- Payment Requests Wizard -->
-        <menuitem id="menu_isp_payment_request" name="Payment Requests" parent="menu_isp_root" action="action_payment_request_wizard" sequence="4"/>
         <record id="action_payment_request_wizard" model="ir.actions.act_window">
             <field name="name">Generate Payment Requests</field>
             <field name="res_model">isp.payment.request.wizard</field>
             <field name="view_mode">form</field>
             <field name="target">new</field>
         </record>
+
+        <!-- Menus -->
+
+        <!-- Main Menu -->
+        <menuitem id="menu_isp_root" name="ISP Management" sequence="10"/>
+
+        <!-- Dashboard -->
+        <menuitem id="menu_isp_dashboard" name="Dashboard" parent="menu_isp_root" sequence="1"/>
+
+        <!-- Services Menu -->
+        <menuitem id="menu_isp_services" name="Services" parent="menu_isp_root" sequence="2"/>
+
+        <!-- ISP Service Model Views -->
+        <menuitem id="menu_isp_service" name="ISP Services" parent="menu_isp_services" action="action_isp_service" sequence="1"/>
+        <menuitem id="menu_isp_providers" name="Providers" parent="menu_isp_services" action="action_isp_provider" sequence="2"/>
+        <menuitem id="menu_isp_service_types" name="Service Types" parent="menu_isp_services" action="action_isp_service_type" sequence="3"/>
+
+        <!-- Wizards -->
+        <menuitem id="menu_isp_invoice_import" name="Import Invoices" parent="menu_isp_root" action="action_invoice_import_wizard" sequence="3"/>
+        <menuitem id="menu_isp_payment_request" name="Payment Requests" parent="menu_isp_root" action="action_payment_request_wizard" sequence="4"/>
 
     </data>
 </odoo>
