--- a/views/menu.xml
+++ b/views/menu.xml
@@ -8,7 +8,7 @@
         <record id="action_isp_service" model="ir.actions.act_window">
             <field name="name">ISP Services</field>
             <field name="res_model">isp.service</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field> <!-- updated -->
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">
                     Create your ISP services here.
@@ -20,14 +20,14 @@
         <record id="action_isp_provider" model="ir.actions.act_window">
             <field name="name">ISP Providers</field>
             <field name="res_model">isp.provider</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field> <!-- updated -->
         </record>
 
         <!-- Service Types -->
         <record id="action_isp_service_type" model="ir.actions.act_window">
             <field name="name">ISP Service Types</field>
             <field name="res_model">isp.service.type</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field> <!-- updated -->
         </record>
 
         <!-- Invoice Import Wizard -->
