--- a/views/menu.xml
+++ b/views/menu.xml
@@ -49,22 +49,22 @@
         <!-- Menus -->
 
         <!-- Main Menu -->
-        <menuitem id="menu_isp_root" name="ISP Management" sequence="10"/>
+      <menuitem id="menu_isp_root" name="ISP Management" sequence="10"/>
 
-        <!-- Dashboard -->
         <menuitem id="menu_isp_dashboard" name="Dashboard" parent="menu_isp_root" sequence="1"/>
-
-        <!-- Services Menu -->
         <menuitem id="menu_isp_services" name="Services" parent="menu_isp_root" sequence="2"/>
 
-        <!-- ISP Service Model Views -->
         <menuitem id="menu_isp_service" name="ISP Services" parent="menu_isp_services" action="action_isp_service" sequence="1"/>
         <menuitem id="menu_isp_providers" name="Providers" parent="menu_isp_services" action="action_isp_provider" sequence="2"/>
         <menuitem id="menu_isp_service_types" name="Service Types" parent="menu_isp_services" action="action_isp_service_type" sequence="3"/>
+        
+        <menuitem id="menu_isp_bill"
+                  name="ISP Bills"
+                  parent="menu_isp_services"
+                  action="action_isp_bill"
+                  sequence="10"/>
 
-        <!-- Wizards -->
         <menuitem id="menu_isp_invoice_import" name="Import Invoices" parent="menu_isp_root" action="action_invoice_import_wizard" sequence="3"/>
         <menuitem id="menu_isp_payment_request" name="Payment Requests" parent="menu_isp_root" action="action_payment_request_wizard" sequence="4"/>
-
     </data>
 </odoo>
